Making new changes and adding more apis with new security checks